--- a/reports/coverage-summary.xml
+++ b/reports/coverage-summary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9774011299435028" branch-rate="0.8970588235294118" lines-covered="173" lines-valid="177" branches-covered="61" branches-valid="68" complexity="2.1818181818181817" version="2.1.1" timestamp="1442372548635">
+<coverage line-rate="0.9783783783783784" branch-rate="0.9" lines-covered="181" lines-valid="185" branches-covered="63" branches-valid="70" complexity="2.142857142857143" version="2.1.1" timestamp="1442403364602">
 	<packages />
 </coverage>
