--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,51 +1,55 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9774011299435028" branch-rate="0.8970588235294118" lines-covered="173" lines-valid="177" branches-covered="61" branches-valid="68" complexity="2.1818181818181817" version="2.1.1" timestamp="1442372548150">
+<coverage line-rate="0.9783783783783784" branch-rate="0.9" lines-covered="181" lines-valid="185" branches-covered="63" branches-valid="70" complexity="2.142857142857143" version="2.1.1" timestamp="1442403364033">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9774011299435028" branch-rate="0.8970588235294118" complexity="2.1818181818181817">
+		<package name="com.tw.biblioteca" line-rate="0.9783783783783784" branch-rate="0.9" complexity="2.142857142857143">
 			<classes>
-				<class name="com.tw.biblioteca.Authenticator" filename="com/tw/biblioteca/Authenticator.java" line-rate="1.0" branch-rate="1.0" complexity="2.0">
+				<class name="com.tw.biblioteca.Authenticator" filename="com/tw/biblioteca/Authenticator.java" line-rate="1.0" branch-rate="1.0" complexity="2.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="11" branch="false"/>
-								<line number="9" hits="11" branch="false"/>
-								<line number="10" hits="11" branch="false"/>
-								<line number="11" hits="11" branch="false"/>
-								<line number="12" hits="11" branch="false"/>
+								<line number="7" hits="12" branch="false"/>
+								<line number="9" hits="12" branch="false"/>
+								<line number="10" hits="12" branch="false"/>
+								<line number="11" hits="12" branch="false"/>
+								<line number="12" hits="12" branch="false"/>
+								<line number="13" hits="12" branch="false"/>
 							</lines>
 						</method>
-						<method name="isValid" signature="(Ljava/lang/String;Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="isValid" signature="(Ljava/lang/String;Ljava/lang/String;)Lcom/tw/biblioteca/User;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="15" hits="3" branch="false"/>
-								<line number="16" hits="3" branch="true" condition-coverage="100% (2/2)">
+								<line number="16" hits="4" branch="false"/>
+								<line number="17" hits="4" branch="true" condition-coverage="100% (4/4)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
+										<condition number="1" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="17" hits="2" branch="false"/>
-								<line number="19" hits="1" branch="false"/>
+								<line number="18" hits="2" branch="false"/>
+								<line number="20" hits="2" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="11" branch="false"/>
-						<line number="9" hits="11" branch="false"/>
-						<line number="10" hits="11" branch="false"/>
-						<line number="11" hits="11" branch="false"/>
-						<line number="12" hits="11" branch="false"/>
-						<line number="15" hits="3" branch="false"/>
-						<line number="16" hits="3" branch="true" condition-coverage="100% (2/2)">
+						<line number="7" hits="12" branch="false"/>
+						<line number="9" hits="12" branch="false"/>
+						<line number="10" hits="12" branch="false"/>
+						<line number="11" hits="12" branch="false"/>
+						<line number="12" hits="12" branch="false"/>
+						<line number="13" hits="12" branch="false"/>
+						<line number="16" hits="4" branch="false"/>
+						<line number="17" hits="4" branch="true" condition-coverage="100% (4/4)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
+								<condition number="1" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="17" hits="2" branch="false"/>
-						<line number="19" hits="1" branch="false"/>
+						<line number="18" hits="2" branch="false"/>
+						<line number="20" hits="2" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6923076923076923" branch-rate="1.0" complexity="1.5">
@@ -646,19 +650,29 @@
 						<line number="49" hits="8" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.User" filename="com/tw/biblioteca/User.java" line-rate="1.0" branch-rate="1.0" complexity="3.0">
+				<class name="com.tw.biblioteca.User" filename="com/tw/biblioteca/User.java" line-rate="1.0" branch-rate="1.0" complexity="2.2">
 					<methods>
-						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="8" hits="33" branch="false"/>
-								<line number="9" hits="33" branch="false"/>
-								<line number="10" hits="33" branch="false"/>
-								<line number="11" hits="33" branch="false"/>
+								<line number="11" hits="2" branch="false"/>
+								<line number="12" hits="2" branch="false"/>
+								<line number="13" hits="2" branch="false"/>
+								<line number="14" hits="2" branch="false"/>
+								<line number="15" hits="2" branch="false"/>
+							</lines>
+						</method>
+						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="17" hits="49" branch="false"/>
+								<line number="18" hits="49" branch="false"/>
+								<line number="19" hits="49" branch="false"/>
+								<line number="20" hits="49" branch="false"/>
+								<line number="21" hits="49" branch="false"/>
 							</lines>
 						</method>
 						<method name="checkPassword" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="28" hits="4" branch="true" condition-coverage="100% (2/2)">
+								<line number="38" hits="5" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
@@ -667,59 +681,71 @@
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="15" hits="10" branch="true" condition-coverage="100% (2/2)">
+								<line number="25" hits="21" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="16" hits="1" branch="false"/>
-								<line number="18" hits="9" branch="true" condition-coverage="100% (2/2)">
+								<line number="26" hits="1" branch="false"/>
+								<line number="28" hits="20" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="19" hits="1" branch="false"/>
-								<line number="20" hits="8" branch="false"/>
-								<line number="21" hits="8" branch="true" condition-coverage="100% (2/2)">
+								<line number="29" hits="1" branch="false"/>
+								<line number="30" hits="19" branch="false"/>
+								<line number="31" hits="19" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="22" hits="5" branch="false"/>
-								<line number="24" hits="3" branch="false"/>
+								<line number="32" hits="9" branch="false"/>
+								<line number="34" hits="10" branch="false"/>
+							</lines>
+						</method>
+						<method name="role" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="42" hits="5" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="8" hits="33" branch="false"/>
-						<line number="9" hits="33" branch="false"/>
-						<line number="10" hits="33" branch="false"/>
-						<line number="11" hits="33" branch="false"/>
-						<line number="15" hits="10" branch="true" condition-coverage="100% (2/2)">
+						<line number="11" hits="2" branch="false"/>
+						<line number="12" hits="2" branch="false"/>
+						<line number="13" hits="2" branch="false"/>
+						<line number="14" hits="2" branch="false"/>
+						<line number="15" hits="2" branch="false"/>
+						<line number="17" hits="49" branch="false"/>
+						<line number="18" hits="49" branch="false"/>
+						<line number="19" hits="49" branch="false"/>
+						<line number="20" hits="49" branch="false"/>
+						<line number="21" hits="49" branch="false"/>
+						<line number="25" hits="21" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="16" hits="1" branch="false"/>
-						<line number="18" hits="9" branch="true" condition-coverage="100% (2/2)">
+						<line number="26" hits="1" branch="false"/>
+						<line number="28" hits="20" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="19" hits="1" branch="false"/>
-						<line number="20" hits="8" branch="false"/>
-						<line number="21" hits="8" branch="true" condition-coverage="100% (2/2)">
+						<line number="29" hits="1" branch="false"/>
+						<line number="30" hits="19" branch="false"/>
+						<line number="31" hits="19" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="22" hits="5" branch="false"/>
-						<line number="24" hits="3" branch="false"/>
-						<line number="28" hits="4" branch="true" condition-coverage="100% (2/2)">
+						<line number="32" hits="9" branch="false"/>
+						<line number="34" hits="10" branch="false"/>
+						<line number="38" hits="5" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
+						<line number="42" hits="5" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.WelcomeMessage" filename="com/tw/biblioteca/WelcomeMessage.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
